# cruft-cookiecutter-sample

./: LICENSE  cookiecutter.json  pyproject.toml
api/: cookiecutter.json  pyproject.toml
api/{{ cookiecutter.api_slug }}/: pyproject.toml
hooks/: post_gen_project.py
package/: cookiecutter.json
pkg/: cookiecutter.json
pkg/hooks/: post_gen_project.py  pre_gen_project.sh
pkg/{{ cookiecutter.pkg_name }}/: pyproject.toml
